--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free & Blue</title>
+    <title>Doki's Atelier</title>
 
     <!----Meta data for page description---->
-    <meta name="description" content="Everything about electrical & information technology engineer Kimmi">
-    <meta name="author" content="Kimmi">
+    <meta name="description" content="Doki's Atelier">
+    <meta name="author" content="DokiKang">
 
     <!----Favicon (logo on the page tab)---->
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -29,12 +29,11 @@
     <nav id="navbar">
         <div class="navbar__logo">
             <i class="fab fa-pagelines"></i>
-            <a href="#">free & blue</a>
+            <a href="#">Doki's Atelier</a>
         </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item" data-link="#home">Home</li>
             <li class="navbar__menu__item" data-link="#about">About</li>
-            <li class="navbar__menu__item" data-link="#skills">Skills</li>
             <li class="navbar__menu__item" data-link="#projects">Projects</li>
             <li class="navbar__menu__item" data-link="#contact">Contact</li>
         </ul>
@@ -48,9 +47,7 @@
     <section id="home">
         <div class="home__container">
             <img src="images/profile.JPG" alt="profile foto" class="home__avatar">
-            <h1 class="home__title">Hello, I'm Kimmi</h1>
-            <h2 class="home__description">An automotive electrical engineer with programmer mindset, <br/> currently residing in Germany</h2>
-            <button class="home__contact">Contact me</button>
+            <h1 class="home__title">Doki</h1>
         </div>  
     </section>
 
