--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- Navigation bar -->
     <nav id="navbar">
         <div class="navbar__logo">
+            <i class="fab fa-pagelines"></i>
             <a href="#">Doki's Atelier</a>
         </div>
         <ul class="navbar__menu">
