--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <!-- Home -->
     <section id="home">
         <div class="home__container">
+            <img src="images/IMG_4856.png">
         </div>  
     </section>
 
