--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <!-- Home -->
     <section id="home">
         <div class="home__container">
+          <img src="images/front.png" alt="profile foto" class="home__avatar">
         </div>
     </section>
 
@@ -96,7 +97,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- Skills -->
     <section id="skills" class="section">
         <div class="section__container">
@@ -254,7 +255,7 @@
                     </div>
                 </a>
             </div>
-        </div>  
+        </div>
     </section>
 
     <!-- Contact -->
