--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item" data-link="#home">Home</li>
-            <li class="navbar__menu__item" data-link="#about">About</li>
+            <li class="navbar__menu__item" data-link="#about">Aboutdfg</li>
             <li class="navbar__menu__item" data-link="#projects">Projects</li>
             <li class="navbar__menu__item" data-link="#contact">Contact</li>
         </ul>
