--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <meta name="description" content="Doki's Atelier">
     <meta name="author" content="DokiKang">
 
-    <!----Favicon (logo on the page tab)---->
-    <link rel="icon" type="image/png" href="images/favicon.png">
-
     <!----Add fonts etc.---->
     <script src="https://kit.fontawesome.com/f2d585ad40.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +30,7 @@
         </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item" data-link="#home">Home</li>
-            <li class="navbar__menu__item" data-link="#about">Aboutdfg</li>
+            <li class="navbar__menu__item" data-link="#about">About</li>
             <li class="navbar__menu__item" data-link="#projects">Projects</li>
             <li class="navbar__menu__item" data-link="#contact">Contact</li>
         </ul>
