--- a/index.html
+++ b/index.html
@@ -49,14 +49,9 @@
     <section id="about" class="section section__container">
         <h1 class="about__title">About me</h1>
         <p class="about__text">
-            I'm a research & development engineer for electromagnetic design of electric machines and an enthusiastic software developer.<br/><br/>
-            It has been always in me to think how to work clever and in a more efficient way. Since time is the most valuable resource in the modern world, every minute you spent for work should be worthy enough. It may sound ironic, but I prefer to spend time in writing small programms or scripts that can accelerate simulations or simple daily tasks. Even for things that are so complicated that I need to look for multiple standards, physical theories and equations behind again and again, It helps a lot being fast and accurate.<br/>
-            Some of those scripts are for analytic calculations of electric machines, which helps for a quick feasibility check for example for design variations. Of course it does not offer the accuracy as a FEA simulation does, but it definitely helps for a quick idea check.
-            I also have numerous mini scripts for simple calculations based on simple physics or equations that you need quite often as a motor design engineer.<br/>
-            Additionally, it is really important for me to make those tools user-friendly and to visualize & present the data in a good looking way. <br/><br/>
-            In general, I would describe myself as a <span style="text-decoration:underline;">"software-oriented person"</span>, because I feel joy and enthusiasm while programming!<br/>
-            So my personal goal is to learn more and deeper about software development by doing mini projects and to publish them right here in this website for feedbacks and for more challenges and chances.
-            Please feel free to contact me. I'm glad for any constructive feedbacks and your interests.
+            geboren in Seoul , Südkorea<br/><br/>
+            lebt in Stuttgart , Deutschland<br/><br/>
+
         </p>
         <!-- Jobs -->
         <div class="about__jobs">
