--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
         <p class="about__text">
             geboren in Seoul , Südkorea<br/><br/>
             lebt in Stuttgart , Deutschland<br/><br/>
-
+            <br/><br/>
+            <span span style="text-decoration:bold;">2008</span><br/><br/>
+            Sungshin Women's University<br/><br/>
+            B.F.A Oriental Painting<br/><br/>
+            <span span style="text-decoration:bold;">seit 2015</span><br/><br/>
+            Staatliche Akademie der Bildenden Künste Stuttgart<br/><br/>
+            bei Prof. Sofia Hultén<br/><br/>
         </p>
         <!-- Jobs -->
         <div class="about__jobs">
