--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
             geboren in Seoul , Südkorea<br/><br/>
             lebt in Stuttgart , Deutschland<br/><br/>
             <br/><br/>
-            <span span style="text-decoration:bold;">2008</span><br/><br/>
+            <span span style="text-decoration:underline;">2008</span><br/><br/>
             Sungshin Women's University<br/><br/>
             B.F.A Oriental Painting<br/><br/>
-            <span span style="text-decoration:bold;">seit 2015</span><br/><br/>
+            <span span style="text-decoration:underline;">seit 2015</span><br/><br/>
             Staatliche Akademie der Bildenden Künste Stuttgart<br/><br/>
             bei Prof. Sofia Hultén<br/><br/>
+            <br/><br/>
+            <h3 class="about__ausstellung">Gruppenausstellung</h3>
         </p>
         <!-- Jobs -->
         <div class="about__jobs">
