--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             geboren in Seoul , Südkorea<br/><br/>
             lebt in Stuttgart , Deutschland<br/><br/>
             <br/><br/>
-            <span span style="text-decoration:underline;">2008</span><br/><br/>
+            <h2>2008</h2>
             Sungshin Women's University<br/><br/>
             B.F.A Oriental Painting<br/><br/>
-            <span span style="text-decoration:underline;">seit 2015</span><br/><br/>
+            <h2>seit 2015</h2>
             Staatliche Akademie der Bildenden Künste Stuttgart<br/><br/>
             bei Prof. Sofia Hultén<br/><br/>
             <br/><br/>
-            <h3 class="about__ausstellung">Gruppenausstellung</h3>
+            <h2>Gruppenausstellung</h2>
         </p>
         <!-- Jobs -->
         <div class="about__jobs">
@@ -92,113 +92,6 @@
             <div class="job__description">
                 <p class="job__detail">Design of Permanent Magnet Synchronous Machines for electric power steering system</p>
                 <p class="job__period">Jan. 2016 ~ Mar. 2018</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Skills -->
-    <section id="skills" class="section">
-        <div class="section__container">
-            <h1 class="skills__title">Skills</h1>
-            <p class="skills__description">
-            </p>
-            <!-- Skill set -->
-            <div class="skillset">
-                <!-- left side -->
-                <div class="skillset__left">
-                    <h3 class="skillset__title">Electric Machine Design</h3>
-                    <p class="skillset__description">Concept design, design optimization <br/> (Electromagnetic FEA Simulation)</p>
-                    <div class="skillset__container">
-                        <div class="skill">
-                            <div class="skill__description">
-                                <span>JMAG</span>
-                                <span>95%</span>
-                            </div>
-                            <div class="skill__bar">
-                                <div class="skill__value" style="width: 95%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__description">
-                                <span>FLUX2D</span>
-                                <span>90%</span>
-                            </div>
-                            <div class="skill__bar">
-                                <div class="skill__value" style="width: 90%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__description">
-                                <span>MATLAB</span>
-                                <span>85%</span>
-                            </div>
-                            <div class="skill__bar">
-                                <div class="skill__value" style="width: 85%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__description">
-                                <span>CAD (Siemens NX, CATIA)</span>
-                                <span>70%</span>
-                            </div>
-                            <div class="skill__bar">
-                                <div class="skill__value" style="width: 70%;"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- right side -->
-                <div class="skillset__right">
-                    <h3 class="skillset__title">Software Development</h3>
-                    <p class="skillset__description">Front-end, mobile (iOS), <br/>machine learning</p>
-                    <div class="skillset__container">
-                        <div class="skill">
-                            <div class="skill__description">
-                                <span>HTML</span>
-                                <span>70%</span>
-                            </div>
-                            <div class="skill__bar">
-                                <div class="skill__value" style="width: 70%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__description">
-                                <span>CSS</span>
-                                <span>70%</span>
-                            </div>
-                            <div class="skill__bar">
-                                <div class="skill__value" style="width: 70%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__description">
-                                <span>JavaScript</span>
-                                <span>50%</span>
-                            </div>
-                            <div class="skill__bar">
-                                <div class="skill__value" style="width: 50%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__description">
-                                <span>Java</span>
-                                <span>50%</span>
-                            </div>
-                            <div class="skill__bar">
-                                <div class="skill__value" style="width: 50%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__description">
-                                <span>Python</span>
-                                <span>50%</span>
-                            </div>
-                            <div class="skill__bar">
-                                <div class="skill__value" style="width: 50%;"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
