--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
             bei Prof. Sofia Hultén<br/><br/>
             <br/><br/>
             <h2>Gruppenausstellung</h2>
+            2016 Bergstaffel I , Stuttgart<br/><br/>
+            2017 Bergstaffel II , Stuttgart<br/><br/>
+            Cloud , Kunstverein Neuhausen<br/><br/>
+            2019 Dem Anlass Entsprechend , Stuttgart<br/><br/>
+            2021 Off_Line , Stuttgart<br/><br/>
+            Ohne Titel , Stuttgart<br/><br/>
+            Vasen  , Stuttgart<br/><br/>
         </p>
         <!-- Jobs -->
         <div class="about__jobs">
