--- a/index.html
+++ b/index.html
@@ -51,54 +51,40 @@
         <p class="about__text">
             geboren in Seoul , Südkorea<br/><br/>
             lebt in Stuttgart , Deutschland<br/><br/>
-            <br/><br/>
-            <h4>2008</h4>
-            Sungshin Women's University<br/><br/>
-            B.F.A Oriental Painting<br/><br/>
-            <h4>seit 2015</h4>
-            Staatliche Akademie der Bildenden Künste Stuttgart<br/><br/>
-            bei Prof. Sofia Hultén<br/><br/>
-            <br/><br/>
-            <h2>Gruppenausstellung</h2>
-            2016 Bergstaffel I , Stuttgart<br/><br/>
-            2017 Bergstaffel II , Stuttgart<br/><br/>
-            Cloud , Kunstverein Neuhausen<br/><br/>
-            2019 Dem Anlass Entsprechend , Stuttgart<br/><br/>
-            2021 Off_Line , Stuttgart<br/><br/>
-            Ohne Titel , Stuttgart<br/><br/>
-            Vasen  , Stuttgart<br/><br/>
         </p>
         <!-- Jobs -->
         <div class="about__jobs">
             <div class="job__position">
-                <div class="logo__container">
-                    <img src="images/jobs/amg.png" alt="Mercedes-AMG" class="job__logo">
-                </div>
-                <p class="job__title">Development engineer for electric machines</p>
+                <p class="job__title">2008</p>
             </div>
             <div class="job__description">
-                <p class="job__detail">Development of belt starter generators, traction motors for high voltage hybrid & electric cars</p>
-                <p class="job__period">Dec. 2019 ~</p>
+                <p class="job__detail">
+                  Sungshin Women's University<br/><br/>
+                  B.F.A Oriental Painting
+                </p>
             </div>
             <div class="job__position">
-                <div class="logo__container">
-                    <img src="images/jobs/brose.png" alt="Brose" class="job__logo">
-                </div>
-                <p class="job__title">Project engineer</p>
+                <p class="job__title">Seit 2015</p>
             </div>
             <div class="job__description">
-                <p class="job__detail">Development of electric climate compressor</p>
-                <p class="job__period">Mar. 2018 ~ Nov. 2019</p>
+                <p class="job__detail">
+                  Staatliche Akademie der Bildenden Künste Stuttgart<br/><br/>
+                  bei Prof. Sofia Hultén
+                </p>
             </div>
             <div class="job__position">
-                <div class="logo__container">
-                    <img src="images/jobs/mando.png" alt="Mando" class="job__logo">
-                </div>
-                <p class="job__title">Development engineer for electric machines</p>
+                <p class="job__title">Gruppenausstellung</p>
             </div>
             <div class="job__description">
-                <p class="job__detail">Design of Permanent Magnet Synchronous Machines for electric power steering system</p>
-                <p class="job__period">Jan. 2016 ~ Mar. 2018</p>
+                <p class="job__detail">
+                  2016 Bergstaffel I , Stuttgart<br/><br/>
+                  2017 Bergstaffel II , Stuttgart<br/><br/>
+                  Cloud , Kunstverein Neuhausen<br/><br/>
+                  2019 Dem Anlass Entsprechend , Stuttgart<br/><br/>
+                  2021 Off_Line , Stuttgart<br/><br/>
+                  Ohne Titel , Stuttgart<br/><br/>
+                  Vasen  , Stuttgart<br/><br/>
+                </p>
             </div>
         </div>
     </section>
