--- a/index.html
+++ b/index.html
@@ -55,35 +55,35 @@
         <!-- Jobs -->
         <div class="about__jobs">
             <div class="job__position">
-                <p class="job__title">2008</p>
+                <p class="job__title">2008<br/></p>
             </div>
             <div class="job__description">
                 <p class="job__detail">
-                  Sungshin Women's University<br/><br/>
-                  B.F.A Oriental Painting
+                  Sungshin Women's University<br/>
+                  B.F.A Oriental Painting<br/><br/>
                 </p>
             </div>
             <div class="job__position">
-                <p class="job__title">Seit 2015</p>
+                <p class="job__title">Seit 2015<br/></p>
             </div>
             <div class="job__description">
                 <p class="job__detail">
-                  Staatliche Akademie der Bildenden Künste Stuttgart<br/><br/>
-                  bei Prof. Sofia Hultén
+                  Staatliche Akademie der Bildenden Künste Stuttgart<br/>
+                  bei Prof. Sofia Hultén<br/><br/>
                 </p>
             </div>
             <div class="job__position">
-                <p class="job__title">Gruppenausstellung</p>
+                <p class="job__title">Gruppenausstellung<br/></p>
             </div>
             <div class="job__description">
                 <p class="job__detail">
-                  2016 Bergstaffel I , Stuttgart<br/><br/>
-                  2017 Bergstaffel II , Stuttgart<br/><br/>
-                  Cloud , Kunstverein Neuhausen<br/><br/>
-                  2019 Dem Anlass Entsprechend , Stuttgart<br/><br/>
-                  2021 Off_Line , Stuttgart<br/><br/>
-                  Ohne Titel , Stuttgart<br/><br/>
-                  Vasen  , Stuttgart<br/><br/>
+                  2016 Bergstaffel I , Stuttgart<br/>
+                  2017 Bergstaffel II , Stuttgart<br/>
+                  Cloud , Kunstverein Neuhausen<br/>
+                  2019 Dem Anlass Entsprechend , Stuttgart<br/>
+                  2021 Off_Line , Stuttgart<br/>
+                  Ohne Titel , Stuttgart<br/>
+                  Vasen  , Stuttgart<br/>
                 </p>
             </div>
         </div>
