--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             </div>
             <div class="job__description">
                 <p class="job__detail">
-                  Sungshin Women's University<br/>
-                  B.F.A Oriental Painting<br/><br/>
+                  Sungshin Women's University<br/><br/>
+                  B.F.A Oriental Painting<br/><br/><br/>
                 </p>
             </div>
             <div class="job__position">
@@ -68,8 +68,8 @@
             </div>
             <div class="job__description">
                 <p class="job__detail">
-                  Staatliche Akademie der Bildenden Künste Stuttgart<br/>
-                  bei Prof. Sofia Hultén<br/><br/>
+                  Staatliche Akademie der Bildenden Künste Stuttgart<br/><br/>
+                  bei Prof. Sofia Hultén<br/><br/><br/>
                 </p>
             </div>
             <div class="job__position">
@@ -77,13 +77,13 @@
             </div>
             <div class="job__description">
                 <p class="job__detail">
-                  2016 Bergstaffel I , Stuttgart<br/>
-                  2017 Bergstaffel II , Stuttgart<br/>
-                  Cloud , Kunstverein Neuhausen<br/>
-                  2019 Dem Anlass Entsprechend , Stuttgart<br/>
-                  2021 Off_Line , Stuttgart<br/>
-                  Ohne Titel , Stuttgart<br/>
-                  Vasen  , Stuttgart<br/>
+                  2016 Bergstaffel I , Stuttgart<br/><br/>
+                  2017 Bergstaffel II , Stuttgart<br/><br/>
+                  Cloud , Kunstverein Neuhausen<br/><br/>
+                  2019 Dem Anlass Entsprechend , Stuttgart<br/><br/>
+                  2021 Off_Line , Stuttgart<br/><br/>
+                  Ohne Titel , Stuttgart<br/><br/>
+                  Vasen  , Stuttgart<br/><br/>
                 </p>
             </div>
         </div>
