--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
         <!-- Jobs -->
         <div class="about__jobs">
             <div class="job__position">
-                <p class="job__title">2008<br/></p>
+                <p class="job__title">2008<br/><br/></p>
             </div>
             <div class="job__description">
                 <p class="job__detail">
                   Sungshin Women's University<br/><br/>
-                  B.F.A Oriental Painting<br/><br/><br/>
+                  B.F.A Oriental Painting<br/><br/><br/><br/>
                 </p>
             </div>
             <div class="job__position">
-                <p class="job__title">Seit 2015<br/></p>
+                <p class="job__title">Seit 2015<br/><br/></p>
             </div>
             <div class="job__description">
                 <p class="job__detail">
                   Staatliche Akademie der Bildenden Künste Stuttgart<br/><br/>
-                  bei Prof. Sofia Hultén<br/><br/><br/>
+                  bei Prof. Sofia Hultén<br/><br/><br/><br/>
                 </p>
             </div>
             <div class="job__position">
-                <p class="job__title">Gruppenausstellung<br/></p>
+                <p class="job__title">Gruppenausstellung<br/><br/></p>
             </div>
             <div class="job__description">
                 <p class="job__detail">
