--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item" data-link="#home">Home</li>
-            <li class="navbar__menu__item" data-link="#about">About</li>
-            <li class="navbar__menu__item" data-link="#projects">Projects</li>
-            <li class="navbar__menu__item" data-link="#contact">Contact</li>
+            <li class="navbar__menu__item" data-link="#about">Über mich</li>
+            <li class="navbar__menu__item" data-link="#projects">Projekte</li>
+            <li class="navbar__menu__item" data-link="#contact">Kontakt</li>
         </ul>
         <!-- Toggle button -->
         <button class="navbar__toggle-btn">
@@ -47,7 +47,7 @@
 
     <!-- About -->
     <section id="about" class="section section__container">
-        <h1 class="about__title">About me</h1>
+        <h1 class="about__title">Über mich</h1>
         <p class="about__text">
             geboren in Seoul , Südkorea<br/><br/>
             lebt in Stuttgart , Deutschland<br/><br/>
@@ -92,18 +92,18 @@
     <!-- Projects -->
     <section id="projects" class="section">
         <div class="section__container">
-            <h1 class="projects__title">Projects</h1>
+            <h1 class="projects__title">Projekte</h1>
             <!-- Categories -->
             <div class="projects__categories">
-                <button class="category__btn active" data-filter="*">All<span class="category__count">12</span></button>
-                <button class="category__btn" data-filter="motor">E-Machine<span class="category__count">3</span></button>
-                <button class="category__btn" data-filter="frontend">Front-end<span class="category__count">3</span></button>
-                <button class="category__btn" data-filter="mobile">Mobile<span class="category__count">3</span></button>
-                <button class="category__btn" data-filter="others">Others<span class="category__count">3</span></button>
+                <button class="category__btn active" data-filter="*">All</button>
+                <button class="category__btn" data-filter="2016">2016</button>
+                <button class="category__btn" data-filter="2017">2017</button>
+                <button class="category__btn" data-filter="2018">2018</button>
+                <button class="category__btn" data-filter="2019">2019</button>
             </div>
             <!-- Items -->
             <div class="projects__item">
-                <a href="" class="project" target="blank" data-type="motor">
+                <a href="" class="project" target="blank" data-type="2016">
                     <img src="images/projects/motor.jpg" alt="motor" class="project__img">
                     <div class="project__description">
                         <h3>E-Machine</h3>
