--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- Jobs -->
         <div class="about__jobs">
             <div class="job__position">
-                <p class="job__title">2008<br/><br/></p>
+                <p class="job__title">2008<br/></p>
             </div>
             <div class="job__description">
                 <p class="job__detail">
@@ -64,7 +64,7 @@
                 </p>
             </div>
             <div class="job__position">
-                <p class="job__title">Seit 2015<br/><br/></p>
+                <p class="job__title">Seit 2015<br/></p>
             </div>
             <div class="job__description">
                 <p class="job__detail">
@@ -73,7 +73,7 @@
                 </p>
             </div>
             <div class="job__position">
-                <p class="job__title">Gruppenausstellung<br/><br/></p>
+                <p class="job__title">Gruppenausstellung<br/></p>
             </div>
             <div class="job__description">
                 <p class="job__detail">
