--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Home -->
     <section id="home">
-      <img src="images/front.png" alt="profile foto" class="home__avatar">
+      <img src="images/front.png" alt="front foto" class="home__image">
     </section>
 
     <!-- About -->
