--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </p>
             </div>
             <div class="job__position">
-                <p class="job__title">Gruppenausstellung<br/></p>
+                <h2 class="job__title">Gruppenausstellung<br/></h2>
             </div>
             <div class="job__description">
                 <p class="job__detail">
