--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Home -->
     <section id="home">
-      <img src="images/front.png" alt="front foto" class="home__image">
+      <div><img src="images/front.png" alt="front foto" class="home__image"></div>
     </section>
 
     <!-- About -->
