--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
     <!-- Home -->
     <section id="home">
-      <div><img src="images/front.png" alt="front foto" class="home__image"></div>
+      <div class="home__image">
+        <img src="images/front.png" alt="front foto">
+      </div>
     </section>
 
     <!-- About -->
