--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 
     <!-- Home -->
     <section id="home">
-      <div class="home__image">
-        <img src="images/front.png" alt="front foto">
-      </div>
+      <img src="images/front.png" alt="front foto" class="home__image">
     </section>
 
     <!-- About -->
