--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
     <!-- Home -->
     <section id="home">
+      <div class="home__container">
+      </div>
     </section>
 
     <!-- About -->
