--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
 
     <!-- Home -->
-    <section id="home">
+    <section id="home" class="section section__container">
       <div class="home__container">
       </div>
     </section>
