--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </nav>
 
     <!-- Home -->
-    <section id="home" class="section section__container">
-      <div class="home__container">
+    <section id="home" class="section">
+      <div class="section__container">
       </div>
     </section>
 
