--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Home -->
     <section id="home" class="section">
-      <div class="section__container">
+      <div class="home__container">
       </div>
     </section>
 
@@ -105,7 +105,6 @@
             <!-- Items -->
             <div class="projects__item">
                 <a href="" class="project" target="blank" data-type="2016">
-                    <img src="images/projects/motor.jpg" alt="motor" class="project__img">
                     <div class="project__description">
                         <h3>E-Machine</h3>
                         <span>Analysis, calculation, design</span>
