--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="section section__container">
+    <section id="about" class="section">
         <h1 class="about__title">Über mich</h1>
         <p class="about__text">
             geboren in Seoul , Südkorea<br/><br/>
