--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav id="navbar">
         <div class="navbar__logo">
             <i class="fab fa-pagelines"></i>
-            <a href="#">Doki's Atelier</a>
+            <a href="#home">Doki's Atelier</a>
         </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item" data-link="#home">Home</li>
@@ -41,13 +41,13 @@
     </nav>
 
     <!-- Home -->
-    <section id="home" class="section">
+    <section id="home" class="section page-scroll" href="#home">
       <div class="home__container">
       </div>
     </section>
 
     <!-- About -->
-    <section id="about" class="section">
+    <section id="about" class="section page-scroll" href="#about">
         <h1 class="about__title">Über mich</h1>
         <p class="about__text">
             geboren in Seoul , Südkorea<br/><br/>
@@ -91,7 +91,7 @@
     </section>
 
     <!-- Projects -->
-    <section id="projects" class="section">
+    <section id="projects" class="section page-scroll" href="#projects">
         <div class="section__container">
             <h1 class="projects__title">Projekte</h1>
             <!-- Categories -->
@@ -143,7 +143,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="section">
+    <section id="contact" class="section page-scroll" href="#contact">
         <h1 class="contact__title">Contact me</h1>
         <h3 class="contact__email">kimhy0809@gmail.com</h3>
         <div class="contact__links">
