--- a/index.html
+++ b/index.html
@@ -26,14 +26,22 @@
     <nav id="navbar">
         <div class="navbar__logo">
             <i class="fab fa-pagelines"></i>
-            <a href="#home">Doki's Atelier</a>
+            <a href="#" data-scroll="#home">Doki's Atelier</a>
         </div>
         <ul class="navbar__menu">
-            <li class="navbar__menu__item" data-link="#home">Home</li>
-            <li class="navbar__menu__item" data-link="#about">Über mich</li>
-            <li class="navbar__menu__item" data-link="#projects">Projekte</li>
-            <li class="navbar__menu__item" data-link="#contact">Kontakt</li>
-        </ul>
+            <li>
+              <a href="#" data-scroll="#home">Home</a>
+            </li>
+            <li>
+              <a href="#" data-scroll="#about">Über mich</a>
+            </li>
+            <li>
+              <a href="#" data-scroll="#projects">Projekte</a>
+            </li>
+            <li>
+              <a href="#" data-scroll="#contact">Kontakt</a>
+            </li>
+          </ul>
         <!-- Toggle button -->
         <button class="navbar__toggle-btn">
             <i class="fas fa-bars"></i>
@@ -41,13 +49,13 @@
     </nav>
 
     <!-- Home -->
-    <section id="home" class="section page-scroll" href="#home">
+    <section id="home" class="section">
       <div class="home__container">
       </div>
     </section>
 
     <!-- About -->
-    <section id="about" class="section page-scroll" href="#about">
+    <section id="about" class="section section__container">
         <h1 class="about__title">Über mich</h1>
         <p class="about__text">
             geboren in Seoul , Südkorea<br/><br/>
@@ -91,7 +99,7 @@
     </section>
 
     <!-- Projects -->
-    <section id="projects" class="section page-scroll" href="#projects">
+    <section id="projects" class="section">
         <div class="section__container">
             <h1 class="projects__title">Projekte</h1>
             <!-- Categories -->
@@ -143,7 +151,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="section page-scroll" href="#contact">
+    <section id="contact" class="section">
         <h1 class="contact__title">Contact me</h1>
         <h3 class="contact__email">kimhy0809@gmail.com</h3>
         <div class="contact__links">
@@ -161,9 +169,7 @@
     </section>
 
     <!-- Arrow up button -->
-    <button class="arrow-up-btn">
-        <i class="fas fa-chevron-circle-up"></i>
-    </button>
+    <a href="#" class="toTop"><i class="fa fa-chevron-up fa-lg"></i></a>
 
 </body>
 </html>
