--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
     </nav>
 
     <!-- Home -->
-    <section id="home" class="section section__container">
+    <section id="home" class="section">
       <div class="home__container">
+        <img src="images/front.png" alt="front" class="home__image">
       </div>
     </section>
 
