--- a/index.html
+++ b/index.html
@@ -48,47 +48,47 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="section section__container">
+    <section id="about" class="section">
+      <div class="section__container">
         <h1 class="about__title">Über mich</h1>
         <p class="about__text">
             geboren in Seoul , Südkorea<br/><br/>
             lebt in Stuttgart , Deutschland<br/><br/>
         </p>
         <!-- Jobs -->
-        <div class="about__jobs">
-            <div class="job__position">
-                <p class="job__title">2008<br/></p>
-            </div>
-            <div class="job__description">
-                <p class="job__detail">
-                  Sungshin Women's University<br/><br/>
-                  B.F.A Oriental Painting<br/><br/><br/><br/>
-                </p>
-            </div>
-            <div class="job__position">
-                <p class="job__title">Seit 2015<br/></p>
-            </div>
-            <div class="job__description">
-                <p class="job__detail">
-                  Staatliche Akademie der Bildenden Künste Stuttgart<br/><br/>
-                  bei Prof. Sofia Hultén<br/><br/><br/><br/>
-                </p>
-            </div>
-            <div class="job__position">
-                <h2 class="job__title">Gruppenausstellung<br/></h2>
-            </div>
-            <div class="job__description">
-                <p class="job__detail">
-                  2016 Bergstaffel I , Stuttgart<br/><br/>
-                  2017 Bergstaffel II , Stuttgart<br/><br/>
-                  Cloud , Kunstverein Neuhausen<br/><br/>
-                  2019 Dem Anlass Entsprechend , Stuttgart<br/><br/>
-                  2021 Off_Line , Stuttgart<br/><br/>
-                  Ohne Titel , Stuttgart<br/><br/>
-                  Vasen  , Stuttgart<br/><br/>
-                </p>
-            </div>
+        <div class="job__position">
+            <p class="job__title">2008<br/></p>
         </div>
+        <div class="job__description">
+            <p class="job__detail">
+              Sungshin Women's University<br/><br/>
+              B.F.A Oriental Painting<br/><br/><br/><br/>
+            </p>
+        </div>
+        <div class="job__position">
+            <p class="job__title">Seit 2015<br/></p>
+        </div>
+        <div class="job__description">
+            <p class="job__detail">
+              Staatliche Akademie der Bildenden Künste Stuttgart<br/><br/>
+              bei Prof. Sofia Hultén<br/><br/><br/><br/>
+            </p>
+        </div>
+        <div class="job__position">
+            <h2 class="job__title">Gruppenausstellung<br/></h2>
+        </div>
+        <div class="job__description">
+            <p class="job__detail">
+              2016 Bergstaffel I , Stuttgart<br/><br/>
+              2017 Bergstaffel II , Stuttgart<br/><br/>
+              Cloud , Kunstverein Neuhausen<br/><br/>
+              2019 Dem Anlass Entsprechend , Stuttgart<br/><br/>
+              2021 Off_Line , Stuttgart<br/><br/>
+              Ohne Titel , Stuttgart<br/><br/>
+              Vasen  , Stuttgart<br/><br/>
+            </p>
+        </div>
+      </div>
     </section>
 
     <!-- Projects -->
