--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav id="navbar">
         <div class="navbar__logo">
             <i class="fab fa-pagelines"></i>
-            <a href="#">Doki's Atelier</a>
+            <a href="#page-top">Doki's Atelier</a>
         </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item" data-link="#home">Home</li>
@@ -41,7 +41,7 @@
     </nav>
 
     <!-- Home -->
-    <section id="home" class="section">
+    <section id="home" class="section" href="#page-top">
       <div class="home__container">
         <img src="images/front.png" alt="front" class="home__image">
       </div>
