--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 </head>
-<body id="page-top">
+<body id="page-top" style="opacity: 1;">
     <!-- Navigation bar -->
     <nav id="navbar">
         <div class="navbar__logo">
