--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
               bei Prof. Sofia Hultén<br/><br/><br/><br/>
             </p>
         </div>
-        <div class="job__position">
+        <div class="job__position job__highlight">
             <h2 class="job__title">Gruppenausstellung<br/></h2>
         </div>
-        <div class="job__description">
+        <div class="job__description job__highlight">
             <p class="job__detail">
               2016 Bergstaffel I , Stuttgart<br/><br/>
               2017 Bergstaffel II , Stuttgart<br/><br/>
@@ -149,17 +149,14 @@
         <h1 class="contact__title">Contact me</h1>
         <h3 class="contact__email">kimhy0809@gmail.com</h3>
         <div class="contact__links">
-            <a href="https://github.com/freeandblue" target="_blank">
-                <i class="fab fa-github"></i>
+            <a href="https://instagram.com/doki_kang?igshid=OGQ5ZDc2ODk2ZA==" target="_blank">
+                <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://de.linkedin.com/in/hye-yeong-kim-2384b4144" target="_blank">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="mailto:kimhy0809@gmail.com?Subject=Some%20subject">
+            <a href="mailto:dokikang2015@gmail.com?Subject=Some%20subject">
                 <i class="fas fa-envelope"></i>
             </a>
         </div>
-        <p class="contact__rights">2021 H.Kim <br/>All rights reserved</p>
+        <p class="contact__rights">2023 DokiKang <br/>All rights reserved</p>
     </section>
 
     <!-- Arrow up button -->
