--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
 
     <!-- Contact -->
     <section id="contact" class="section">
-        <h1 class="contact__title">Contact me</h1>
-        <h3 class="contact__email">kimhy0809@gmail.com</h3>
+        <h1 class="contact__title">Melden Sie sich</h1>
+        <h3 class="contact__email">dokikang2015@gmail.com</h3>
         <div class="contact__links">
             <a href="https://instagram.com/doki_kang?igshid=OGQ5ZDc2ODk2ZA==" target="_blank">
-                <i class="fab fa-instagram"></i>
+                <i class="fab fa-instagram-filled"></i>
             </a>
             <a href="mailto:dokikang2015@gmail.com?Subject=Some%20subject">
                 <i class="fas fa-envelope"></i>
