--- a/index.html
+++ b/index.html
@@ -94,53 +94,20 @@
     <!-- Projects -->
     <section id="projects" class="section">
         <div class="section__container">
+          <div class="row">
             <h1 class="projects__title">Projekte</h1>
-            <!-- Categories -->
-            <div class="projects__categories">
-                <button class="category__btn active" data-filter="*">All</button>
-                <button class="category__btn" data-filter="2016">2016</button>
-                <button class="category__btn" data-filter="2017">2017</button>
-                <button class="category__btn" data-filter="2018">2018</button>
-                <button class="category__btn" data-filter="2019">2019</button>
-            </div>
-            <!-- Items -->
+          </div>
+          <div class="row">
             <div class="projects__item">
                 <a href="" class="project" target="blank" data-type="2016">
-                    <img src="images/projects/motor.jpg" alt="motor" class="project__img">
+                  <div class="project-hover">
                     <div class="project__description">
-                        <h3>E-Machine</h3>
-                        <span>Analysis, calculation, design</span>
+                      <h2>2016</h2>
                     </div>
-                </a>
-                <a href="projects/LuK.html" class="project" target="blank" data-type="motor">
-                    <img src="images/projects/LuK.jpg" alt="clearance and creepage" class="project__img">
-                    <div class="project__description">
-                        <h3>E-Machine</h3>
-                        <span>Clearance and creepage distance for electrical insulation</span>
-                    </div>
-                </a>
-                <a href="" class="project" target="blank" data-type="frontend">
-                    <img src="images/projects/frontend.jpg" alt="front-end" class="project__img">
-                    <div class="project__description">
-                        <h3>Front-end</h3>
-                        <span>HTML, CSS, JavaScript</span>
-                    </div>
-                </a>
-                <a href="" class="project" target="blank" data-type="mobile">
-                    <img src="images/projects/mobile.jpg" alt="mobile" class="project__img">
-                    <div class="project__description">
-                        <h3>Mobile Development</h3>
-                        <span>iOS Applications</span>
-                    </div>
-                </a>
-                <a href="" class="project" target="blank" data-type="others">
-                    <img src="images/projects/others.jpg" alt="others" class="project__img">
-                    <div class="project__description">
-                        <h3>Others</h3>
-                        <span>interesting & fun stuff</span>
-                    </div>
+                  </div>
                 </a>
             </div>
+          </div>
         </div>
     </section>
 
